[package]
name = "multiproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
actix-web = "4"
awc = "3.0.0"
url = "2.2"
log = "0.4"
env_logger = "0.9"